WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34669
getUniformLocation should return null for invalid uniforms
https://bugs.webkit.org/show_bug.cgi?id=34669
Summary
getUniformLocation should return null for invalid uniforms
Kenneth Russell
Reported
2010-02-05 17:27:49 PST
WebGLRenderingContext::getUniformLocation should return null for invalid uniforms. Currently it will return a WebGLUniformLocation object wrapping the number -1, which is poor behavior. As a corollary, the WebGL specification should be updated to state this behavior explicitly.
Attachments
Proposed patch
(3.81 KB, patch)
2010-03-03 18:41 PST
,
Vangelis Kokkevis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vangelis Kokkevis
Comment 1
2010-03-03 18:41:26 PST
Created
attachment 49977
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2010-03-04 01:41:35 PST
Comment on
attachment 49977
[details]
Proposed patch Clearing flags on attachment: 49977 Committed
r55514
: <
http://trac.webkit.org/changeset/55514
>
WebKit Commit Bot
Comment 3
2010-03-04 01:41:39 PST
All reviewed patches have been landed. Closing bug.
Vangelis Kokkevis
Comment 4
2010-03-04 14:24:55 PST
WebGL spec updated accordingly in rev 10594
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug