2010-03-04  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Oliver Hunt.

        Update existing test to check that getUniformLocation() returns
        null if the uniform requested is not found.
        https://bugs.webkit.org/show_bug.cgi?id=34669

        * fast/canvas/webgl/script-tests/uniform-location.js:
        * fast/canvas/webgl/uniform-location-expected.txt:
2010-03-04  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Oliver Hunt.

        getUniformLocation() now returns null if uniform requested
        is not found.
        https://bugs.webkit.org/show_bug.cgi?id=34669

        Test:LayoutTests/fast/canvas/webgl/uniform-location.html
        (added missing test)

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getUniformLocation):

Canonical link: https://commits.webkit.org/46811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55514 268f45cc-cd09-0410-ab3c-d52691b4dbfc